fixing letter spacing.

--- a/src/theme/globals.scss
+++ b/src/theme/globals.scss
@@ -33,7 +33,7 @@ body {
   padding: 0;
   background-color: white;
   overflow-y: hidden;
-  letter-spacing: -0.8px;
+  letter-spacing: -0.6px;
   color: #2d3f4e;
   /* Add any other styles you want to reset or modify */
 }
